# MASKE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  chemistry.cpp  chemistry.h  fix_Cfoo.cpp  fix_nucleate.h  interactions.cpp  lammpsIO.cpp  makefile  maske.h  memory.h  universe.h  whole_build.sh
RUN/: Output.xlsx  config0.xyz  convert_units.xlsx  debug.xlsx  log.lammps  logfile.txt  maske  po.txt  table.potential  thermo.txt  ~$Output.xlsx
RUN/C3S_CG_param/: 1_in.bulkFCC  2-mechanisms-Nicoleau.xlsx  2_in.stress_strain  potential.xlsx
RUN/MK_CG_param/: potential.xlsx
RUN/maske.dSYM/Contents/: Info.plist
RUN/maske.dSYM/Contents/Resources/DWARF/: maske
liblammps_EnricoMacAir/liblammps_mac_mpi.so.dSYM/Contents/: Info.plist
src/: DTnucleate.cpp  DTnucleate.h  IGORS.cpp  block.cpp  block.h  chemistry.cpp  chemistry.h  error.cpp  error.h  fix.cpp  fix.h  fix_Cfoo.h  fix_CmstoreLMP.cpp  fix_CmstoreLMP.h  fix_EmstoreLMP.cpp  fix_EmstoreLMP.h  fix_delete.cpp  fix_delete.h  fix_nucleate.cpp  fix_nucleate.h  fix_nufeb.cpp  fix_nufeb.h  inputmsk.cpp  inputmsk.h  interactions.h  krun.cpp  krun.h  lammpsIO.cpp  lammpsIO.h  main.cpp  maske.cpp  maske.h  memory.cpp  output.cpp  output.h  particles.cpp  particles.h  pointers.h  randm.cpp  randm.h  (+14 more)
src/MASKE/MASKE.xcodeproj/: project.pbxproj
src/MASKE/MASKE.xcodeproj/project.xcworkspace/xcuserdata/emasoero.xcuserdatad/: UserInterfaceState.xcuserstate
src/useful_code_for_future/: normalising_simbox.cpp
test12-Lay_Nucl_2Grp_Sm_Mono_1pr/: Thermo_bench-12.xlsx  table.potential  thermo.txt
test13-Lay_Nucl_2Grp_Sm_Mono_2x2pr/: Thermo_bench-13.xlsx
test14-Lay_Nucl_2Grp_Sm_Mono_4pr/: maske
tests/basic_Ca(OH)2-CaCO3/: prepare_inputs.xlsx  thermo copy.txt  thermo.xlsx
tests/basic_Ca(OH)2-CaCO3/documentation/: Notes_on_TST.aux  Notes_on_TST.blg  Notes_on_TST.tex  Notes_on_TST.toc  basic_test.aux  basic_test.bbl  basic_test.blg  basic_test.tex  basic_test.toc
tests/basic_layer/: Readme.md  benchmarking.xlsx  prepare_inputs.xlsx
tests/basic_layer/sim_ki0.5/: thermo_b0.1_20210205.txt  thermo_b1.1_20210205.txt
tests/basic_layer/sim_net/: thermo_b0.1_20210205.txt  thermo_b1.1_20210205.txt
tests/initial_configs/CaCO3/: dump.ball_small  dump.broken_layer_small  dump.cube_small  dump.long_flat_kinks  dump.small_flat_layer  dump.thick_flat_kinks  in.long_flat_kinks  in.small_cube  in.small_flat_layer  in.thick_flat_kinks  log.lammps  table.potential  tableOUT.txt
tests/initial_configs/CaOH2/: dump.pour  dump.small_ball  in.small_cube  log.lammps  table.potential  tableOUT.txt
tests/test12-Lay_Nucl_2Grp_Sm_Mono_1pr/: log.lammps  tableOUT.txt
tests/test13-Lay_Nucl_2Grp_Sm_Mono_2x2pr/: log.lammps  thermo.txt
tests/test14-Lay_Nucl_2Grp_Sm_Mono_4pr/: Thermo_bench-14.xlsx  tableOUT.txt  thermo.txt
tests/test_CSH-CH_CO2/: Next_steps_draft.txt  Readme.md  prepare_inputs.xlsx
tests/test_CSH-CH_CO2/1_Ca(OH)2_crystals/: CH-particles_0.28volfrac.m4v  Vol_fracs.txt  dump.tempIN_Antonello  dump.tempTRY_Antonello  dump.temp_Antonello  log.lammps  thermo.txt
tests/test_CaCO3_layer/: log.lammps  maske  solubility.m  table.potential_SI  tableOUT.txt  thermo.txt
tests/test_CaCO3_layer/mechanical_tests/: 3_out_elastic_post.xlsx  log.lammps
tests/test_deletion_micro/: dump.temp_Antonello  dumpL.tmp  log.subB.lammps  table.potential_CH-CH.txt  thermo.txt
tests/test_micro/: table.potential_CH-CH.txt  table.potential_CSH-CH.txt  table.potential_CSH-CSH.txt
tests/test_micro_nucleate/: dump.all.Antonello  dump.temp_Antonello  log.Antonello.lammps  log.lammps  log.subB.lammps  po.txt  thermo.txt
tests/test_nufeb1/: atom.in  table.potential  table.potential_SI
tests/test_nufeb_crack/: atom.in  solubility-20191214.m  table.potential_SI  thermo.txt  thermo.xlsx
tests/test_nufeb_crack/mechanical_tests/: 3_in.elastic_SI_post  3_in.elastic_SI_pre  3_out_elastic_pre.xlsx
tests/test_nufeb_new/: table.potential_CH-CH.txt  table.potential_CH-CaCO3.txt  table.potential_CSH-CH.txt  table.potential_CSH-CSH  table.potential_CaCO3-CSH.txt  table.potential_CaCO3-CaCO3.txt
tests/test_nufeb_new/Results/: .~lock.avg_concentration.csv#  avg_concentration.csv  avg_ph.csv  biomass.csv  bulk.csv  ntypes.csv
tests/test_nufeb_new/Results_m-m/: avg_concentration.csv  avg_ph.csv  biomass.csv  bulk.csv  ntypes.csv
tests/test_nufeb_new/old_example/: atom.in  table.potential_SI
tests/test_nufeb_new/old_example/Results/: avg_concentration.csv  avg_ph.csv  biomass.csv  bulk.csv  ntypes.csv
